[project]
name = "bank-operation"
version = "0.1.0"
description = ""
authors = [
    {name = "Anton"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"



[tool.black]
line-length = 119
exclude = '''
/(
    \.venv|
    \.git|
    \.mypy_cache|
    \.pytest_cache|
    build|
    dist
)/
'''

[tool.isort]
line_length = 119
multi_line_output = 3

[tool.mypy]
warn_return_any = true
disallow_untyped_defs = true
no_implicit_optional = true
exclude = 'venv'




[tool.poetry.group.lint.dependencies]
flake8 = "^7.2.0"
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.16.0"

